<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Calculator">

    <LinearLayout
        android:layout_width="279dp"
        android:layout_height="573dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.313">

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="131dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/num1"
                android:layout_width="173dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="NUM1"
                android:textAlignment="center"
                android:textSize="30dp"/>

            <EditText
                android:id="@+id/num2"
                android:layout_width="183dp"
                android:layout_height="131dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="NUM2"
                android:textAlignment="center"
                android:textSize="30dp" />
        </LinearLayout>

        <Spinner
            android:layout_marginTop="10dp"
            android:id="@+id/spinnerC"
            android:layout_width="match_parent"
            android:layout_height="64dp" />

        <Button
            android:layout_marginTop="10dp"
            android:id="@+id/buttonC"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:text="CALCULAR"
            android:textSize="20dp"/>

        <TextView
            android:layout_marginTop="10dp"
            android:id="@+id/resultC"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text=""
            android:textAlignment="center"
            android:textSize="25dp"
            android:textColor="@color/white"/>
    </LinearLayout>

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="CALCULADORA"
        android:textSize="20dp"
        android:textAlignment="center"
        android:textColor="@color/white"/>
</androidx.constraintlayout.widget.ConstraintLayout>