<resources>
    <string name="app_name">Unit-tests</string>

    <string-array name="calculation_types">
        <item>Salario diario</item>
        <item>Descuento por salud</item>
        <item>Descuento por pensión</item>
    </string-array>

    <string-array name="operations">
        <item>Suma</item>
        <item>Resta</item>
        <item>Multiplicación</item>
        <item>División</item>
    </string-array>

</resources>