<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Salary">


    <LinearLayout
        android:layout_width="311dp"
        android:layout_height="388dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.413">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="SALARIO"
            android:textSize="20dp"
            android:textAlignment="center"
            android:textColor="@color/white"/>

        <EditText
            android:layout_marginTop="10dp"
            android:id="@+id/salary"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="Ingrese su salario"
            android:textAlignment="center"
            android:textSize="30dp"/>

        <Spinner
            android:layout_marginTop="10dp"
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:entries="@array/calculation_types" />

        <Button
            android:layout_marginTop="10dp"
            android:id="@+id/calcularSalario"
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:text="CALCULAR"
            android:textSize="20dp"/>

        <TextView
            android:layout_marginTop="10dp"
            android:id="@+id/showSalary"
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:text=""
            android:textAlignment="center"
            android:textSize="25dp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>